# Spartan

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
benches/: nizk.rs  snark.rs
profiler/: nizk.rs  snark.rs
src/: dense_mlpoly.rs  lib.rs  math.rs  product_tree.rs  r1csinstance.rs  r1csproof.rs  random.rs  sparse_mlpoly.rs  sumcheck.rs  unipoly.rs
src/scalar/: mod.rs
