[package]
name = "spartan"
version = "0.3.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2018"
description = "High-speed zkSNARKs without trusted setup"
documentation = "https://docs.rs/spartan/"
readme = "README.md"
repository = "https://github.com/microsoft/Spartan"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
merlin = "2.0.0"
digest = "0.9"
byteorder = "1.3.4"
rayon = { version = "1.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
subtle = { version = "^2.2.3", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
zeroize = { version = "1", default-features = false }
itertools = "0.10.0"
colored = "2.0.0"
flate2 = "1.0.14"
thiserror = "1.0"
bitvec = {version = "0.22", default-features = false}
ff = {version = "0.10", features = ["derive"]}
rand_chacha = "0.3"
fffft = "*"
blake3 = "0.3"
lcpc-ligero-pc = "0.1"
lcpc-2d = "0.1"
ff-derive-num = "0.1"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3.1"

[lib]
name = "libspartan"
path = "src/lib.rs"

[[bin]]
name = "snark"
path = "profiler/snark.rs"

[[bin]]
name = "nizk"
path = "profiler/nizk.rs"

[[bench]]
name = "snark"
harness = false

[[bench]]
name = "nizk"
harness = false

[features]
multicore = ["rayon"]
profile = []
